Updated CSS for filterbar, to prevent overlapped elements

--- a/core/src/zeit/content/volume/browser/resources/toclisting.css
+++ b/core/src/zeit/content/volume/browser/resources/toclisting.css
@@ -2,3 +2,11 @@
 .tocListing > tbody > tr > td:nth-last-child(2) {
    display: none;
 }
+
+.toc_topcontent {
+   top: 5em !important;
+}
+
+#tocListingFilter {
+   width: 75%;
+}
